--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link ref="stylesheet" rel="text/css" href="assets/css/reset.css">
-    <link ref="stylesheet" rel="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" rel="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" rel="text/css" href="assets/css/style.css">
+    <script src="assets/javascript/game.js"></script>
     <title>Psychic-Game index page</title>
 </head>
 <body>
     <div id="game">
-        <p>Press any letter to start game!</p>
+        <p>Press any letter to start game!-THIS WILL BE YOUR FIRST GUESS!!!!</p>
+        <img src="assets/images/p1.jpg" height=400px width-400pxalt="pyschic image">
+        <h3>Pyschic Game</h3>
       </div>
-      <script src="assets/javascript/game.js"></script>
+     
 </body>
 </html>
