--- a/index.html
+++ b/index.html
@@ -5,15 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" rel="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" rel="text/css" href="assets/css/style.css">
     <script src="assets/javascript/game.js"></script>
     <title>Psychic-Game index page</title>
 </head>
 <body>
     <div id="game">
-        <p>Press any letter to start game!-THIS WILL BE YOUR FIRST GUESS!!!!</p>
-        <img src="assets/images/p1.jpg" height=400px width-400pxalt="pyschic image">
+        <div class="container">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+        <header>
         <h3>Pyschic Game</h3>
+        </header>
+        </div>
+        <div class="col-3"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-6">
+        <img class="image1" src="assets/images/p1.jpg" height=400px width=800px alt="pyschic image">
+        </div>
+        <div class="col-5"></div>
+    </div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+        <p>Press any letter to start game!-THIS WILL BE YOUR FIRST GUESS!!!!</p>
+        </div>
+        <div class="col-3"></div>
+    </div>
+    </div>
       </div>
      
 </body>
