--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-3"></div>
                 <div class="col-6">
         <header>
-        <h3>Pyschic Game</h3>
+        <h3>Psychic Game</h3>
         </header>
         </div>
         <div class="col-3"></div>
